--- a/ProductCrudKnockOut/Views/Company/Index.cshtml
+++ b/ProductCrudKnockOut/Views/Company/Index.cshtml
@@ -13,7 +13,7 @@
         <tr>
             <td></td>
             <td data-bind="text:companyName"></td>
-            <td data-bind="text:productId"></td>
+            <td data-bind="text:productManufactured"></td>
             <td data-bind="text:companyEstd"></td>
             <td data-bind="text:companyPhNo"></td>
             <td>
